# cpp_project_template

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
docs/: example_doc.md
runnable/: CMakeLists.txt  font.hpp  main.cpp
src/: CMakeLists.txt  main.cpp
src/include/: example_class.hpp
tests/: CMakeLists.txt  test.cpp
